# pyuvc

./: .bumpversion.cfg  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  HOWTO_WINDOWS.md  INSTALL_WINDOWS.md  LICENSE  MANIFEST.in  README.md  README.rst  WINDOWS_DEVELOPER.md  WINDOWS_INSTALL.txt  WINDOWS_USER.md  WINDOW_DEVELOPER.md  controls.pxi  cturbojpeg.pxd  cuvc.pxd  example.py  linux_time.pxi  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini  uvc.pyx  uvc_yuv.pyx  windows_time.pxi
.github/workflows/: main.yml  on-release-main.yml
cmake/: FindLibUSB.cmake  FindLibUVC.cmake  FindTurboJPEG.cmake
docs/: conf.py  index.rst
examples/: access_100_frames.py  print_camera_controls.py  vis_two_cameras.py
pyuvc-source/: CMakeLists.txt  cturbojpeg.pxd  cuvc.pxd  darwin_time.pxi  linux_time.pxi  uvc_bindings.pyx  windows_time.pxi
pyuvc-source/uvc/: __init__.py
scripts/: build-and-test.sh  build-deps-manylinux.sh  build-deps-unix.sh  download-deps-win.ps1  repair-wheels-win.py
src/pupil_labs/project_name/: __init__.py
tests/: test_api.py
