[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=3.4.1",
    "wheel",
    "Cython",
    "numpy",
    "pkgconfig",
    "scikit-build",
    "cmake",
    "ninja;platform_system != \"Windows\"",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cibuildwheel]
archs = ["native"]
skip = "{cp,pp}27-* {cp,pp}35-* pp*"

build-frontend = "build"

test-command = "pytest {package}/tests -v"
before-test = ""
test-requires = ["pytest"]
test-extras = []

manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel pupil-pthreads-win"
repair-wheel-command = [
    'bash scripts/repair-wheels-windows.sh {dest_dir} {wheel}',
]

[tool.cibuildwheel.macos]
before-all = ["{project}/scripts/build-deps-unix.sh"]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y libudev-devel",
    "{project}/scripts/build-deps-manylinux.sh",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk add eudev-dev nasm",
    "{project}/scripts/build-deps-manylinux.sh",
]
