[metadata]
name = pupil-labs-uvc
description = Usb Video Class Device bindings with format conversion tool
url = https://github.com/pupil-labs/pyuvc
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    numpy
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6

[options.extras_require]
docs =
    furo
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
example =
    opencv-python
    rich
